[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Root.gd" type="Script" id=1]
[ext_resource path="res://assets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://src/HUD.gd" type="Script" id=3]
[ext_resource path="res://src/Spawn.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/PlayerGroup.gd" type="Script" id=5]
[ext_resource path="res://assets/Pixeled.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/particle_00.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 5
extra_spacing_top = -3
extra_spacing_bottom = -4
font_data = ExtResource( 6 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Spawn" parent="." instance=ExtResource( 4 )]

[node name="PlayerGroup" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 599, 158 )
amount = 75
lifetime = 15.0
emission_shape = 2
emission_rect_extents = Vector2( 0, 300 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 100.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 599, 158 )
amount = 75
lifetime = 15.0
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 0, 300 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 100.0

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RogerinCounter" type="Control" parent="HUD"]
margin_left = 5.0
margin_top = 5.0
margin_right = 129.0
margin_bottom = 35.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RogerinPanel" type="Panel" parent="HUD/RogerinCounter"]
margin_left = -2.0
margin_top = -2.0
margin_right = 84.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/RogerinCounter/RogerinPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 83.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.133333, 0.137255, 0.137255, 1 )
text = "ROGERIN'S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterPanel" type="Panel" parent="HUD/RogerinCounter"]
margin_left = 88.0
margin_top = -2.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( -7, -15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/RogerinCounter/CounterPanel"]
margin_left = 6.0
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.133333, 0.137255, 0.137255, 1 )
text = "000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePanel" type="Panel" parent="HUD/RogerinCounter"]
margin_left = 491.0
margin_top = 212.0
margin_right = 567.0
margin_bottom = 315.0
rect_pivot_offset = Vector2( -7, -15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/RogerinCounter/ScorePanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 72.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0.133333, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )
text = "TOP ROGERIN'S
LAST GEN SCORE:
1 - 00.00
2 - 00.00
3 - 00.00
4 - 00.00
5 - 00.00
6 - 00.00
7 - 00.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimePanel" type="Panel" parent="HUD/RogerinCounter"]
margin_left = 491.0
margin_top = 189.0
margin_right = 567.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( -7, -15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/RogerinCounter/TimePanel"]
margin_left = 6.0
margin_top = 5.0
margin_right = 70.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.133333, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )
text = "TIME: 00.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenPanel" type="Panel" parent="HUD/RogerinCounter"]
margin_left = 524.0
margin_top = 166.0
margin_right = 567.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( -7, -15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/RogerinCounter/GenPanel"]
margin_left = 6.0
margin_top = 5.0
margin_right = 38.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.133333, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )
text = "GEN 000"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pass_obstacle" from="Spawn" to="." method="_on_Spawn_pass_obstacle"]
